# ArcWelderPlugin

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  PyArcWelder.cp38-win_amd64.pyd  README.md  setup.cfg  setup.py
arc_welder_cli/: CMakeLists.txt  main.cpp
octoprint_arc_welder/: __init__.py  _version.py  firmware_checker.py  log.py  preprocessor.py  ray_process.py  utilities.py
octoprint_arc_welder/data/firmware/: types_default.json
octoprint_arc_welder/static/css/: arc_welder.css
octoprint_arc_welder/static/docs/help/: firmware_klipper.md  firmware_marlin.md  firmware_marlin_2.0.7.2.md  firmware_prusa.md  firmware_prusa_buddy.md  firmware_smoothieware.md  firmware_virtual_marlin.md  settings.allow_3d_arcs.md  settings.allow_dynamic_precision.md  settings.allow_travel_arcs.md  settings.allow_z_axis_changes.md  settings.auto_process_slicer_uploads_only.md  settings.check_firmware.md  settings.check_for_updates.md  settings.current_run_configuration_visible.md  settings.default_e_precision.md  settings.default_xyz_precision.md  settings.delete_source.md  settings.enabled.md  settings.extrusion_rate_variance_detection_enabled.md  settings.file_processing.md  (+21 more)
octoprint_arc_welder/static/js/: arc_welder.js  arc_welder.settings.js  markdown_help.js  pnotify_extensions.js
octoprint_arc_welder/templates/: arc_welder_settings.jinja2  arc_welder_settings_about.jinja2  arc_welder_statistics.jinja2  arc_welder_tab.jinja2
octoprint_arc_welder/test/: __init__.py  test_firmware_checker.py  test_gcode_search.py
octoprint_arc_welder_setuptools/: __init__.py
(+43 files in other folders)
